// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-loader ProgressBar should have an indeterminate mode 1`] = `
<div
  className="
        progress
        
        progressIndeterminate
      "
  style={
    Object {
      "backgroundColor": null,
      "width": undefined,
    }
  }
/>
`;

exports[`fyndiq-component-loader ProgressBar should have the proper structure 1`] = `
<div
  className="
      progressbar
      
    "
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="
        progress
        
        false
      "
    style={
      Object {
        "backgroundColor": null,
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`fyndiq-component-loader it should be rendered with no props 1`] = `
<svg
  className="
      icon
      
    "
  height={50}
  viewBox="0 0 100 100"
  width={50}
>
  <rect
    fill="#FD5167"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <path
    className="wave"
    d="M 0 -12.5
        q 40 12.5, 80 0
        t 80 0
        t 80 0
        t 80 0
        t 80 0
        t 80 0
        v 125
        q -40 12.5, -80 0
        t -80 0
        t -80 0
        t -80 0
        t -80 0
        t -80 0
        Z
      "
    fill="#4A90E2"
  />
</svg>
`;

exports[`fyndiq-component-loader it should have a size prop 1`] = `
<svg
  className="
      icon
      
    "
  height={40}
  viewBox="0 0 100 100"
  width={40}
>
  <rect
    fill="#FD5167"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <path
    className="wave"
    d="M 0 -12.5
        q 40 12.5, 80 0
        t 80 0
        t 80 0
        t 80 0
        t 80 0
        t 80 0
        v 125
        q -40 12.5, -80 0
        t -80 0
        t -80 0
        t -80 0
        t -80 0
        t -80 0
        Z
      "
    fill="#4A90E2"
  />
</svg>
`;

exports[`fyndiq-component-loader it should have colors props 1`] = `
<svg
  className="
      icon
      
    "
  height={50}
  viewBox="0 0 100 100"
  width={50}
>
  <rect
    fill="red"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <path
    className="wave"
    d="M 0 -12.5
        q 40 12.5, 80 0
        t 80 0
        t 80 0
        t 80 0
        t 80 0
        t 80 0
        v 125
        q -40 12.5, -80 0
        t -80 0
        t -80 0
        t -80 0
        t -80 0
        t -80 0
        Z
      "
    fill="black"
  />
</svg>
`;

exports[`fyndiq-component-loader it should have wave props 1`] = `
<path
  className="wave"
  d="M 0 -2.5
        q 2.5 2.5, 5 0
        t 5 0
        t 5 0
        t 5 0
        t 5 0
        t 5 0
        v 105
        q -2.5 2.5, -5 0
        t -5 0
        t -5 0
        t -5 0
        t -5 0
        t -5 0
        Z
      "
  fill="#4A90E2"
/>
`;
